@startuml

title __DOMOTIX > CONTROLLER's Class Diagram__\n

namespace src.domotix.controller {
    class src.domotix.controller.Importatore {
        + importaUnitaImmobiliari()
        + importaCategorieSensori()
        + importaCategorieAttuatori()
    }

    class src.domotix.controller.Modificatore {
    }

    class src.domotix.controller.OperazioniFinali {
    }

    class src.domotix.controller.OperazioniIniziali {
    }

    class src.domotix.controller.Recuperatore {
    }

    class src.domotix.controller.Verificatore {
    }

    class src.domotix.controller.TimerGestioneRegole {
    }

    class src.domotix.controller.TimerRinfrescoDati {
    }

    class src.domotix.controller.TimerAzioniProgrammate {
    }

    namespace util {
        class src.domotix.controller.util.StringUtil {
        }
        class src.domotix.controller.util.TimerTaskAzione {
        }
    }
}

namespace src.domotix.model {

}

src.domotix.controller.Modificatore --> src.domotix.controller.util.StringUtil
src.domotix.controller.Modificatore --> src.domotix.controller.Recuperatore
src.domotix.controller.Modificatore --> src.domotix.controller.Verificatore
src.domotix.controller.Modificatore --> src.domotix.model
src.domotix.controller.Importatore --> src.domotix.model

src.domotix.controller.Verificatore --> src.domotix.controller.Recuperatore
src.domotix.controller.Verificatore --> src.domotix.model

src.domotix.controller.Recuperatore --> src.domotix.model

src.domotix.controller.OperazioniIniziali --> src.domotix.model
src.domotix.controller.OperazioniIniziali --> src.domotix.view.MenuErroreApertura

src.domotix.controller.OperazioniFinali --> src.domotix.model
src.domotix.controller.OperazioniFinali --> src.domotix.view.MenuErroreChiusura

src.domotix.controller.TimerGestioneRegole --> src.domotix.model
src.domotix.controller.TimerRinfrescoDati --> src.domotix.model
src.domotix.controller.TimerAzioniProgrammate --> src.domotix.model
src.domotix.controller.TimerAzioniProgrammate o-> TimerTask : task
src.domotix.controller.TimerAzioniProgrammate o-> src.domotix.controller.util.TimerTaskAzione : taskAzioni
src.domotix.controller.util.TimerTaskAzione --|> TimerTask

@enduml
